vfpl_lexer/src/snapshots/vfpl_lexer__test__alphabetical_char_in_number.snap
---
source: vfpl_lexer/src/test.rs
expression: "lex(\"12a\")"

---
Err(
    InvalidCharacter(
        Span {
            start: 2,
            end: 3,
        },
    ),
)
