vfpl_lexer/src/snapshots/vfpl_lexer__test__decimal_with_alphabetical_char.snap
---
source: vfpl_lexer/src/test.rs
expression: "lex(\"00001.as244\")"

---
Err(
    InvalidCharacter(
        Span {
            start: 6,
            end: 7,
        },
    ),
)
