vfpl_lexer/src/snapshots/vfpl_lexer__test__please_keyword.snap
---
source: vfpl_lexer/src/test.rs
expression: "lex(\"please\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 6,
            },
            kind: Please,
        },
        Token {
            span: Span {
                start: 18446744073709551615,
                end: 18446744073709551615,
            },
            kind: Eof,
        },
    ],
)
