vfpl_lexer/src/snapshots/vfpl_lexer__test__should_be_ident.snap
---
source: vfpl_lexer/src/test.rs
expression: "lex(\"please hugo\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 6,
            },
            kind: Please,
        },
        Token {
            span: Span {
                start: 7,
                end: 11,
            },
            kind: Ident(
                Spur(1),
            ),
        },
        Token {
            span: Span {
                start: 18446744073709551615,
                end: 18446744073709551615,
            },
            kind: Eof,
        },
    ],
)
