vfpl_lexer/src/snapshots/vfpl_lexer__test__string_no_end.snap
---
source: vfpl_lexer/src/test.rs
expression: "lex(\"\\\"Hahaha this is going to destroy it\")"

---
Err(
    UnexpectedEOF,
)
